# backend/api/fenzvideo/v1/admin_http.pb.go
@@ -1,0 +1,309 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             v6.33.4
+// source: fenzvideo/v1/admin.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationAdminServiceAdminCreateTag = "/fenzvideo.v1.AdminService/AdminCreateTag"
+const OperationAdminServiceAdminDeleteTag = "/fenzvideo.v1.AdminService/AdminDeleteTag"
+const OperationAdminServiceAdminDeleteUser = "/fenzvideo.v1.AdminService/AdminDeleteUser"
+const OperationAdminServiceAdminDeleteVideo = "/fenzvideo.v1.AdminService/AdminDeleteVideo"
+const OperationAdminServiceAdminListUsers = "/fenzvideo.v1.AdminService/AdminListUsers"
+const OperationAdminServiceAdminListVideos = "/fenzvideo.v1.AdminService/AdminListVideos"
+const OperationAdminServiceAdminUpdateTag = "/fenzvideo.v1.AdminService/AdminUpdateTag"
+
+type AdminServiceHTTPServer interface {
+	AdminCreateTag(context.Context, *AdminCreateTagRequest) (*AdminCreateTagReply, error)
+	AdminDeleteTag(context.Context, *AdminDeleteTagRequest) (*AdminDeleteTagReply, error)
+	AdminDeleteUser(context.Context, *AdminDeleteUserRequest) (*AdminDeleteUserReply, error)
+	AdminDeleteVideo(context.Context, *AdminDeleteVideoRequest) (*AdminDeleteVideoReply, error)
+	AdminListUsers(context.Context, *AdminListUsersRequest) (*AdminListUsersReply, error)
+	AdminListVideos(context.Context, *AdminListVideosRequest) (*AdminListVideosReply, error)
+	AdminUpdateTag(context.Context, *AdminUpdateTagRequest) (*AdminUpdateTagReply, error)
+}
+
+func RegisterAdminServiceHTTPServer(s *http.Server, srv AdminServiceHTTPServer) {
+	r := s.Route("/")
+	r.GET("/api/v1/admin/users", _AdminService_AdminListUsers0_HTTP_Handler(srv))
+	r.DELETE("/api/v1/admin/users/{id}", _AdminService_AdminDeleteUser0_HTTP_Handler(srv))
+	r.GET("/api/v1/admin/videos", _AdminService_AdminListVideos0_HTTP_Handler(srv))
+	r.DELETE("/api/v1/admin/videos/{id}", _AdminService_AdminDeleteVideo0_HTTP_Handler(srv))
+	r.POST("/api/v1/admin/tags", _AdminService_AdminCreateTag0_HTTP_Handler(srv))
+	r.PUT("/api/v1/admin/tags/{id}", _AdminService_AdminUpdateTag0_HTTP_Handler(srv))
+	r.DELETE("/api/v1/admin/tags/{id}", _AdminService_AdminDeleteTag0_HTTP_Handler(srv))
+}
+
+func _AdminService_AdminListUsers0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminListUsersRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminListUsers)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminListUsers(ctx, req.(*AdminListUsersRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminListUsersReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminDeleteUser0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminDeleteUserRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminDeleteUser)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminDeleteUser(ctx, req.(*AdminDeleteUserRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminDeleteUserReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminListVideos0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminListVideosRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminListVideos)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminListVideos(ctx, req.(*AdminListVideosRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminListVideosReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminDeleteVideo0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminDeleteVideoRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminDeleteVideo)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminDeleteVideo(ctx, req.(*AdminDeleteVideoRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminDeleteVideoReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminCreateTag0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminCreateTagRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminCreateTag)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminCreateTag(ctx, req.(*AdminCreateTagRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminCreateTagReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminUpdateTag0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminUpdateTagRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminUpdateTag)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminUpdateTag(ctx, req.(*AdminUpdateTagRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminUpdateTagReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AdminService_AdminDeleteTag0_HTTP_Handler(srv AdminServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in AdminDeleteTagRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAdminServiceAdminDeleteTag)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.AdminDeleteTag(ctx, req.(*AdminDeleteTagRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*AdminDeleteTagReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type AdminServiceHTTPClient interface {
+	AdminCreateTag(ctx context.Context, req *AdminCreateTagRequest, opts ...http.CallOption) (rsp *AdminCreateTagReply, err error)
+	AdminDeleteTag(ctx context.Context, req *AdminDeleteTagRequest, opts ...http.CallOption) (rsp *AdminDeleteTagReply, err error)
+	AdminDeleteUser(ctx context.Context, req *AdminDeleteUserRequest, opts ...http.CallOption) (rsp *AdminDeleteUserReply, err error)
+	AdminDeleteVideo(ctx context.Context, req *AdminDeleteVideoRequest, opts ...http.CallOption) (rsp *AdminDeleteVideoReply, err error)
+	AdminListUsers(ctx context.Context, req *AdminListUsersRequest, opts ...http.CallOption) (rsp *AdminListUsersReply, err error)
+	AdminListVideos(ctx context.Context, req *AdminListVideosRequest, opts ...http.CallOption) (rsp *AdminListVideosReply, err error)
+	AdminUpdateTag(ctx context.Context, req *AdminUpdateTagRequest, opts ...http.CallOption) (rsp *AdminUpdateTagReply, err error)
+}
+
+type AdminServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewAdminServiceHTTPClient(client *http.Client) AdminServiceHTTPClient {
+	return &AdminServiceHTTPClientImpl{client}
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminCreateTag(ctx context.Context, in *AdminCreateTagRequest, opts ...http.CallOption) (*AdminCreateTagReply, error) {
+	var out AdminCreateTagReply
+	pattern := "/api/v1/admin/tags"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminCreateTag))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminDeleteTag(ctx context.Context, in *AdminDeleteTagRequest, opts ...http.CallOption) (*AdminDeleteTagReply, error) {
+	var out AdminDeleteTagReply
+	pattern := "/api/v1/admin/tags/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminDeleteTag))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminDeleteUser(ctx context.Context, in *AdminDeleteUserRequest, opts ...http.CallOption) (*AdminDeleteUserReply, error) {
+	var out AdminDeleteUserReply
+	pattern := "/api/v1/admin/users/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminDeleteUser))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminDeleteVideo(ctx context.Context, in *AdminDeleteVideoRequest, opts ...http.CallOption) (*AdminDeleteVideoReply, error) {
+	var out AdminDeleteVideoReply
+	pattern := "/api/v1/admin/videos/{id}"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminDeleteVideo))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "DELETE", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminListUsers(ctx context.Context, in *AdminListUsersRequest, opts ...http.CallOption) (*AdminListUsersReply, error) {
+	var out AdminListUsersReply
+	pattern := "/api/v1/admin/users"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminListUsers))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminListVideos(ctx context.Context, in *AdminListVideosRequest, opts ...http.CallOption) (*AdminListVideosReply, error) {
+	var out AdminListVideosReply
+	pattern := "/api/v1/admin/videos"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminListVideos))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AdminServiceHTTPClientImpl) AdminUpdateTag(ctx context.Context, in *AdminUpdateTagRequest, opts ...http.CallOption) (*AdminUpdateTagReply, error) {
+	var out AdminUpdateTagReply
+	pattern := "/api/v1/admin/tags/{id}"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAdminServiceAdminUpdateTag))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "PUT", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
